# website-agent-server

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
static/: app.js  auth.html  auth.js  index.html  styles.css
website_agent_server/: __init__.py  __main__.py  auth.py  browser.py  config.py  cookies.py  main.py  url_policy.py
website_agent_server/static/: app.js  auth.css  auth.html  index.html  styles.css
