[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "website-agent-server"
version = "0.1.8"
description = "A server-side browser proxy that lets clients operate websites without direct remote connections."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "playwright>=1.48",
  "python-multipart>=0.0.9",
]

[project.scripts]
website-agent-server = "website_agent_server.__main__:main"

[tool.setuptools.package-data]
website_agent_server = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
